# deep-portfolio

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflos/: test.yaml
.github/workflows/: docker.yaml
configs/: default.yaml
deepportfolio/: __init__.py  cli.py  optim.py
deepportfolio/data/: dummy.py
deepportfolio/datasets/: __init__.py  portfolio.py
deepportfolio/loss_fn/: __init__.py  log_return.py  sharpe.py  sortino.py
deepportfolio/metrics/: __init__.py  average.py  profit.py
deepportfolio/nn/: __init__.py  port.py  portfolio.py  portfolio_net.py
deepportfolio/trainers/: __init__.py  portfolio.py
deepportfolio/transforms/: __init__.py  functional.py  transforms.py
scripts/: data_split.py  download_historical_data_from_yahoo_finance.py  get_historical_data_from_yahoo_finance.py  preprocess.py
tests/: test_loss_fn.py  test_metrics.py  test_nn.py
