[tool.poetry]
name = "deep-portfolio"
version = "0.1.0"
description = ""
authors = ["なるみ <weaper@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
torch = "1.11.0"
torchvision = "0.12.0"
numpy = "1.21.2"
tqdm = "4.62.3"
click = "^8.1.3"
mlconfig = "^0.1.6"
yapf = "^0.32.0"
yfinance = "^0.1.70"
mlflow = "^1.26.1"
loguru = "^0.6.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
